--- a/src/components/InputForm.css
+++ b/src/components/InputForm.css
@@ -6,6 +6,8 @@
   grid-template-columns: repeat(2, minmax(min-content, 1fr));
   grid-template-rows: repeat(6, 1fr);
   border: solid 1px var(--color-primary--dark);
+
+  padding: 1rem;
 }
 
 .input__form--content {
@@ -24,7 +26,7 @@
 }
 
 .input__form-content--label {
-  grid-column: 1 / 2;
+  grid-column: 1 / 3;
 }
 
 .input__form-content--label-1 {
