--- a/src/components/InputList.css
+++ b/src/components/InputList.css
@@ -5,10 +5,14 @@
 
   grid-template-columns: 1fr repeat(3, minmax(min-content, 1fr)) 1fr;
   grid-template-rows: auto;
+
+  padding: 1rem;
 }
 
 .input__list--type {
+  grid-column: 1 / 2;
 }
 
 .input__list--options {
+  grid-column: 5 / 6;
 }
