--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   width: 100vw;
   height: 100vh;
 
+  background-color: whitesmoke;
+
   display: grid;
   grid-template-columns:
     [screen-start] 1fr [center-start] repeat(
