--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,5 +5,5 @@
   letter-spacing: 0.2rem;
   color: var(--color-primary);
   font-weight: 300;
-  border: solid 0.2rem var(--color-primary--dark);
+  /* border: solid 0.2rem var(--color-primary--dark); */
 }
