--- a/src/components/InputForm.css
+++ b/src/components/InputForm.css
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(min-content, 1fr));
   grid-template-rows: repeat(6, 1fr);
-  border: solid 1px var(--color-primary--dark);
+  /* border: solid 0.2rem var(--color-primary--dark); */
 
   padding: 1rem;
 }
@@ -27,6 +27,9 @@
 
 .input__form-content--label {
   grid-column: 1 / 3;
+  font-weight: 300;
+  font-size: 1.5rem;
+  color: var(--color-primary--darker);
 }
 
 .input__form-content--label-1 {
@@ -37,14 +40,52 @@
   grid-row: 1 / 2;
 }
 
-.input__form-content--input {
+.select-wrapper {
+  grid-row: 2 / 3;
   grid-column: 1 / 3;
+  width: 100%;
+
+  position: relative;
 }
 
 .input__form-content--input-1 {
-  grid-row: 2 / 3;
+  width: 100%;
+  height: 100%;
+  background-color: whitesmoke;
+  border: none;
+  border-bottom: 0.1rem solid var(--color-primary--dark);
+  cursor: pointer;
+  outline: none;
+  color: var(--color-primary--darker);
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+  font-weight: 300;
 }
 
 .input__form-content--input-2 {
   grid-row: 2 / 3;
+  grid-column: 1 / 3;
+  outline: none;
+  border: 0.1rem solid var(--color-primary--dark);
+  font-size: 1.2rem;
+  font-weight: 200;
+  color: rgb(29, 29, 29);
+}
+
+.input__form--submit {
+  background-color: var(--color-primary--dark);
+  outline: none;
+  border: none;
+  padding: 1rem 3rem;
+  grid-column: 1 / 3;
+  color: var(--color-ivory);
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  font-weight: 200;
+  transition: all 0.45s ease-in-out;
+  cursor: pointer;
+}
+
+.input__form--submit:hover {
+  background-color: var(--color-primary);
 }
