--- a/src/components/InputList.css
+++ b/src/components/InputList.css
@@ -1,18 +1,50 @@
 .input__list {
-  border: solid 1px var(--color-primary--dark);
+  /* border: solid 0.2rem var(--color-primary--dark); */
 
   display: grid;
-
-  grid-template-columns: 1fr repeat(3, minmax(min-content, 1fr)) 1fr;
-  grid-template-rows: auto;
+  align-content: flex-start;
 
   padding: 1rem;
+  overflow: scroll;
+  transition: all 0.45s ease-in-out;
 }
 
-.input__list--type {
-  grid-column: 1 / 2;
+.input-item {
+  display: flex;
+  width: 100%;
+  height: 5vh;
+  margin-bottom: 1rem;
+  background-color: var(--color-primary);
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  color: var(--color-ivory);
 }
 
-.input__list--options {
-  grid-column: 5 / 6;
+.input__list-label {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-right: 1rem;
+  /* width: 50%; */
+  /* text-align: center; */
+}
+
+.input__list-item {
+  font-size: 1rem;
+}
+
+.input__list--item-name-label {
+}
+
+.input__list--item-name {
+}
+
+.input__list--item-name:not(:last-child) {
+  margin-right: 2rem;
+}
+
+.input__list--item-type-label {
+}
+
+.input__list--item-type {
 }
