--- a/src/components/InputList.css
+++ b/src/components/InputList.css
@@ -1,6 +1,4 @@
 .input__list {
-  /* border: solid 0.2rem var(--color-primary--dark); */
-
   display: grid;
   align-content: flex-start;
 
@@ -25,26 +23,21 @@
   font-size: 1rem;
   font-weight: 600;
   margin-right: 1rem;
-  /* width: 50%; */
-  /* text-align: center; */
 }
 
 .input__list-item {
   font-size: 1rem;
 }
 
-.input__list--item-name-label {
-}
-
-.input__list--item-name {
-}
-
 .input__list--item-name:not(:last-child) {
   margin-right: 2rem;
 }
 
-.input__list--item-type-label {
-}
-
-.input__list--item-type {
+.delete-button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-size: large;
+  margin-left: auto;
 }
